homepage buttons covered fix

--- a/src/app/user/pages/home-page/home-page.component.scss
+++ b/src/app/user/pages/home-page/home-page.component.scss
@@ -2792,7 +2792,7 @@ h6 {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      bottom: 100px;
+      bottom: 23%;
       width: 90%;
       -webkit-transform: translateX(-50%);
       -moz-transform: translateX(-50%);
