--- a/src/app/user/pages/tesla-competition/tesla-competition.component.scss
+++ b/src/app/user/pages/tesla-competition/tesla-competition.component.scss
@@ -1440,7 +1440,7 @@ button {
   }
   .intro {
     .text-holder {
-      margin-top: 30px;
+      margin-bottom: 30px;
 
       .upper-text {
         .countdown-row {
